Fix some additional bootstrap v4 layout issues

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -6,7 +6,7 @@ body {
 
 @media (max-width: 979px) {
   body {
-    padding-top: 0px;
+    padding-top: 60px;
   }
 }
 
